test/tests/stages/16_characters_and_strings/invalid_parse/invalid_type_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  char
  identifier(x)
  =
  const int(10)
  ;
  return
  identifier(x)
  ;
  }
